# aacas_ros_sim

./: .gitignore  README.md
aacas_detection/: CMakeLists.txt  package.xml
aacas_detection/config/: multi_obstacle_params.yaml  obstacle_params.yaml
aacas_detection/msg/: ObstacleDetection.msg
aacas_detection/src/: object_detections.py
aacas_detection/srv/: QueryDetections.srv
aacas_motion/: CMakeLists.txt  package.xml
aacas_motion/config/: vector_field_planner_params.yaml
aacas_motion/src/: vectFieldController.py  vectFieldController_multiObject.py
dji_m600_sim/: CMakeLists.txt  package.xml
dji_m600_sim/config/: dji_sdk_sim_params.yaml  moving_obstacle_params.yaml  multi_obstacle_params.yaml  obstacle_params.yaml  vector_field_planner_params.yaml
dji_m600_sim/launch/: display.launch  moving_obstacle.launch  multi_obstacle.launch  simulation.launch
dji_m600_sim/models/collision_sphere/: model.sdf
dji_m600_sim/msg/: ObstacleDetection.msg  ObstacleDetectionArray.msg
dji_m600_sim/rviz/: urdf.rviz
dji_m600_sim/src/: dji_sdk_sim.py  object_detections.py  obstacle_visualize_python.py  rviz_collision_publisher.cpp  rviz_collision_publisher_no_gazebo.cpp  tf_broadcaster.cpp  vectFieldController.py  vectFieldController_multiObject.py
dji_m600_sim/srv/: QueryDetections.srv
dji_m600_sim/urdf/: gazebo.xacro  geometries.xacro  links.xacro  materials.xacro  properties.xacro
dji_m600_sim/worlds/: sphere_collision.world
